Adding temporary changes to Github

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -36,7 +36,7 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/moorthy.png" alt="Card image">
+        <img class="card-img-top" src="/static/number1.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Moorthy</p>
           <p>Person1 Title</p>
@@ -46,7 +46,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/Karthik.png" alt="Card image">
+        <img class="card-img-top" src="/static/number2.png" alt="Card image">
         <div class="card-body">
           <p class="title">Karthik</p>
           <p>Person2 Title</p>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/Jayakumar.png" alt="Card image">
+        <img class="card-img-top" src="/static/number3.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Jayakumar</p>
           <p>Person3 Title</p>
